ingress.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: edu-shclub
spec:
  host: edu-shclub.apps.211-34-231-82.nip.io
  port:
    targetPort: 80
  to:
    kind: Service
    name: mynginx
