route2.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app.kubernetes.io/component: server
  name: nginx-route
spec:
  host: flask-edu18.apps.okd4.ktdemo.duckdns.org
  port:
    targetPort: 5000
  tls:
    insecureEdgeTerminationPolicy: Allow
    termination: edge
  to:
    kind: Service
    name: flask-edu4-app
    weight: 100
  wildcardPolicy: None
